# head-tracker-cpp

./: CMakeLists.txt  PointType.cpp  PointType.h  detector.cpp  detector.h  graphics.cpp  graphics.h  main.cpp
